<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_locate_me" android:titleCondensed=""
        android:icon="@drawable/ic_action_locate"
        android:title="@string/locate_me"
        android:showAsAction="ifRoom|withText"
        />
    
    <item android:id="@+id/menu_refresh" android:titleCondensed=""
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        android:showAsAction="ifRoom|withText"
        />
    
    <item android:id="@+id/menu_stations_list" android:titleCondensed=""
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/liste_stations"
        android:showAsAction="ifRoom|withText"
        />
    <item android:id="@+id/menu_starred" android:titleCondensed=""
        android:icon="@drawable/menu_starred"
        android:title="@string/favoris"
        android:showAsAction="ifRoom|withText"
        />
    
    <item android:id="@+id/menu_display_markers" android:titleCondensed=""
        android:icon="@drawable/menu_location_place"
        android:title="@string/display_markers"
        android:showAsAction="ifRoom|withText"
        />
    
    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear_map"
        android:icon="@drawable/content_remove"
        android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>